# Datapeek

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: build.yml
electron/: main.js  package.json  preload.js
scripts/: build_binary.bat  build_binary.sh  build_electron.sh
tests/: test_data_manager.py  test_export.py  test_format_detector.py  test_readers.py  test_routes.py
web_app/: app.py  cli.py  config.py  utils.py
web_app/core/: data_manager.py  exporter.py  format_detector.py
web_app/core/readers/: __init__.py  columnar.py  hierarchical.py  serialization.py  storage.py  tensor.py
web_app/routes/: data.py  export.py  upload.py
web_app/static/css/: style.css
web_app/static/js/: export.js  upload.js  visualizer.js
web_app/templates/: base.html  upload.html  visualizer.html
