[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapeek"
version = "1.1.0"
description = "Visually inspect, edit, and export non-human-readable binary data files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DataPeek Contributors"},
]
keywords = ["data", "binary", "viewer", "parquet", "hdf5", "visualizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "flask>=3.0",
    "gunicorn",
    "pyarrow",
    "fastparquet",
    "fastavro",
    "h5py",
    "netCDF4",
    "zarr",
    "xarray",
    "numpy",
    "pandas",
    "msgpack",
    "lmdb",
    "safetensors",
    "openpyxl",
    "tables",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
datapeek = "web_app.cli:main"

[tool.setuptools.packages.find]
include = ["web_app*"]
